--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,128 +1,85 @@
-:root {
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --animation-duration: 250ms;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-}
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #fff;
-    color: #212121;
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-button {
-    min-width: 100px;
-    background: lightblue;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 0px;
-    border-radius: 4px;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    cursor: pointer;
-    padding: 8px 24px;
-    transition: box-shadow var(--animation-duration) var(--timing-function);
-}
-
-button:hover,
-button:focus {
-    background: lightskyblue;
-}
-
-.search-form-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: azure;
-    z-index: 3;
-}
+@import '~node_modules/modern-normalize/modern-normalize.css';
+@import './common';
+@import './example';
 
 .search-form {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    max-width: 600px;
-    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(59, 61, 99);
 }
 
 input {
-    border-radius: 4px;
-    padding: 8px 16px;
-    border: 2px solid rgb(173, 216, 230);
-    font-size: 14px;
-}
-
-input:focus {
-    border: 2px solid lightskyblue;
-    outline: none;
-}
-
-.gallery {
-    margin-top: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.photo-card {
-    background-color: #fff;
-    max-width: 360px;
-    height: 370px;
-    border-radius: 5px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-    transition: box-shadow var(--animation-duration) var(--timing-function),
-        scale var(--animation-duration) var(--timing-function);
-}
-
-.photo-card:hover {
-    box-shadow: 0px 1px 6px rgba(128, 160, 170, 0.91),
-        0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    scale: 1.1;
-}
-
-.photo {
-    display: block;
-    width: 360px;
-    height: 290px;
-    object-fit: cover;
+    height: 30px;
+    margin-right: 10px;
     border-radius: 5px;
 }
 
-.info {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    gap: 20px;
-}
+.load-more {
+    cursor: pointer;
+    height: 30px;
+    border-radius: 5px;
+    background-color: rgb(213, 205, 247);
 
-.info-item {
-    font-size: 16px;
-    color: #212121;
 }
 
 .load-more {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
+    margin-bottom: 24px;
 }
 
-.hide {
+.load-more.is-hidden {
     display: none;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.photo-link {
+    border: 2px solid rgb(32, 24, 105);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: scale, 250ms;
+    display: flex;
+        justify-content: space-around;
+
+}
+
+.photo-link:hover,
+.photo-link:focus {
+    overflow: hidden;
+    scale: 1.02;
+    cursor: pointer;
+    box-shadow: -5px 5px rgba(0, 0, 0, 0.2);
+}
+.photo-card {
+    border-radius: 5px 5px 0 0;
+}
+
+.info-item {
+    text-align: center;
+    display: flex;
+}
+.search-btn {
+    width: 15px;
+    height: 15px;
+    border: 2px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
 }
