--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,117 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
+* {
+    box-sizing: border-box;
+}
+:root {
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-duration: 250ms;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
+}
+
+ul {
+    list-style: none;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+button {
+    padding: 0;
+    display: block;
+}
+
+.search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: rgb(59, 61, 99);
+}
+
+input {
+    font: inherit;
+    max-width: 320px;
+    margin-bottom: 16px;
+    color: rgb(14, 14, 171);
+    font-size: large;
+    font-style: italic;
+    height: 30px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+button {
+    font: inherit;
+    max-width: 320px;
+    margin-bottom: 16px;
+    color: rgb(14, 14, 171);
+    font-size: large;
+    font-style: italic;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.gallery__item {
+    position: relative;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__image:hover {
+    transform: scale(1.03);
+}
+
+.gallery__image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.gallery__link {
+    display: block;
+    text-decoration: none;
+    height: 100%;
+}
+
+.gallery__link:hover {
+    cursor: zoom-in;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 10;
+    justify-content: space-around;
+}
+
+.load-more {
+    margin-top: 35px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 24px;
+}
